--- a/src/components/button/button.pug
+++ b/src/components/button/button.pug
@@ -1,18 +1,20 @@
 mixin button(options)
   -
-    let isRegister = options.isRegister
-    let isRegisterRus = options.isRegisterRus
-    let isWithArrow = options.isWithArrow
-    let isTransparent = options.transparent
-    let isNoBorder = options.isNoBorder
-    let isSmall = options.isSmall
-    let buttonClass = 'button'
-    buttonClass += isRegister == 'true' ? ' button_register' : ''
-    buttonClass += isRegisterRus == 'true' ? ' button_register-rus' : ''
-    buttonClass += isWithArrow == 'true' ? ' button_with-arrow' : ''
-    buttonClass += isTransparent == 'true' ? ' button_transparent' : ''
-    buttonClass += isNoBorder == 'true' ? ' button_with-no-border' : ''
-    buttonClass += isSmall == 'true' ? ' button_small' : ''
+    let isRegister = options.isRegister;
+    let isRegisterRus = options.isRegisterRus;
+    let isLoginRus = options.isLoginRus;
+    let isWithArrow = options.isWithArrow;
+    let isTransparent = options.transparent;
+    let isNoBorder = options.isNoBorder;
+    let isSmall = options.isSmall;
+    let buttonClass = 'button';
+    buttonClass += isRegister == 'true' ? ' button_register' : '';
+    buttonClass += isRegisterRus == 'true' ? ' button_register-rus' : '';
+    buttonClass += isLoginRus == 'true' ? ' button_login-rus' : '';
+    buttonClass += isWithArrow == 'true' ? ' button_with-arrow' : '';
+    buttonClass += isTransparent == 'true' ? ' button_transparent' : '';
+    buttonClass += isNoBorder == 'true' ? ' button_with-no-border' : '';
+    buttonClass += isSmall == 'true' ? ' button_small' : '';
   button(class= buttonClass)
     span.button__label
       span.button__text= options.text
