--- a/src/pages/search-room/search-room.scss
+++ b/src/pages/search-room/search-room.scss
@@ -5,7 +5,12 @@
 @import '../../components/header/header.scss';
 @import '../../components/footer/footer.scss';
 @import '../../components/room-card/room-card.scss';
-
+@import '../../components/checkbox-buttons/checkbox-buttons.scss';
+@import '../../components/pagination/pagination.scss';
+@import '../../components/slider/slider.scss';
+@import '../../components/exp-checkbox/exp-checkbox.scss';
+@import '../../components/dropdown/dropdown.scss';
+@import '../../components/date-dropdown/date-dropdown.scss';
 
 .search-room {
   &__wrapper {
