continue search room page
added content for rooms

--- a/src/pages/search-room/search-room.pug
+++ b/src/pages/search-room/search-room.pug
@@ -30,6 +30,21 @@ include ../../components/exp-checkbox/exp-checkbox.pug
         ['beds', 'Кровать', 'Кровати', 'Кроватей'],
         ['bathrooms', 'Ванная комната', 'Ванные комнаты', 'Ванных комнат'],
       ];
+  let roomItems = [
+        {imageUrl: '../../images/search-room/image1.jpg', number: '888', type: 'люкс', price: '9 990', starsCount: 5, reviewsCount: 145,},
+        {imageUrl: '../../images/search-room/image2.jpg', number: '840', type: '', price: '9 990', starsCount: 4, reviewsCount: 65,},
+        {imageUrl: '../../images/search-room/image3.jpg', number: '980', type: 'люкс', price: '8500', starsCount: 3, reviewsCount: 35,},
+        {imageUrl: '../../images/search-room/image4.jpg', number: '856', type: '', price: '7300', starsCount: 5, reviewsCount: 19,},
+        {imageUrl: '../../images/search-room/image5.jpg', number: '740', type: '', price: '6000', starsCount: 4, reviewsCount: 44,},
+        {imageUrl: '../../images/search-room/image6.jpg', number: '982', type: '', price: '5800', starsCount: 3, reviewsCount: 56,},
+        {imageUrl: '../../images/search-room/image7.jpg', number: '678', type: '', price: '5500', starsCount: 5, reviewsCount: 45,},
+        {imageUrl: '../../images/search-room/image8.jpg', number: '450', type: '', price: '5300', starsCount: 4, reviewsCount: 39,},
+        {imageUrl: '../../images/search-room/image9.jpg', number: '350', type: '', price: '5000', starsCount: 3, reviewsCount: 77,},
+        {imageUrl: '../../images/search-room/image10.jpg', number: '666', type: '', price: '5000', starsCount: 5, reviewsCount: 25,},
+        {imageUrl: '../../images/search-room/image11.jpg', number: '444', type: '', price: '5000', starsCount: 4, reviewsCount: 15,},
+        {imageUrl: '../../images/search-room/image12.jpg', number: '352', type: '', price: '5000', starsCount: 3, reviewsCount: 55,},
+      ]
+
 
 html
   head
@@ -97,10 +112,20 @@ html
               ],
             })
         .search-room__content
-          h1.search-room__title
+          h1.search-room__title Номера, которые мы для вас подобрали
           .search-room__rooms
-            .search-room__room-card
+            each item in roomItems
+              .search-room__room-card
+                +room-card({
+                  imageUrl: item.imageUrl,
+                  number: item.number,
+                  type: item.type,
+                  price: item.price,
+                  starsCount: item.starsCount,
+                  reviewsCount: item.reviewsCount,
+                })
           .search-room__pagination
+            +pagination()
       .search-room__footer
         +footer({
           lang: 'ru',
