--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -10,6 +10,7 @@
     padding: 100px 140px 103px 140px;
     display: flex;
     border-bottom: 1px solid rgba(31, 32, 65, 0.1);
+    border-top: 1px solid rgba(31, 32, 65, 0.1);
 
 
     @media (max-width: 1250px) {
