--- a/src/pages/search-room/search-room.scss
+++ b/src/pages/search-room/search-room.scss
@@ -15,13 +15,16 @@
 .search-room {
   &__wrapper {
     max-width: 1440px;
-    min-width: 385px;
+    min-width: 320px;
     width: 100%;
     margin: 0 auto;
 
     display: flex;
     min-height: 100vh;
     flex-direction: column;
+
+    background: #FFFFFF;
+    box-shadow: 0px 10px 20px $dark5;
   }
 
   &__header {}
@@ -34,21 +37,58 @@
 
   &__room-card {}
 
-  &__aside {}
+  &__aside {
+    padding-top: 30px;
+    padding-left: 140px;
+  }
+
+  &__date-dropdown-title,
+  &__guests-dropdown-title,
+  &__items-dropdown-title {
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 15px;
+    text-transform: uppercase;
+    color: $dark100;
+  }
 
   &__date-dropdown {}
 
-  &__guests-dropdown {}
+  &__date-dropdown-element {
+    margin-top: 5px;
+  }
 
-  &__slider {}
+  &__guests-dropdown {
+    margin-top: 20.44px;
+  }
 
-  &__checkbox-buttons {}
+  &__guests-dropdown-element {
+    margin-top: 4.56px;
+  }
 
-  &__rich-checkbox-buttons {}
+  &__slider {
+    margin-top: 33.44px;
+  }
 
-  &__items-dropdown {}
+  &__checkbox-buttons {
+    margin-top: 95px;
+  }
 
-  &__exp-checkbox-buttons {}
+  &__rich-checkbox-buttons {
+    margin-top: 34px;
+  }
+
+  &__items-dropdown {
+    margin-top: 32.44px;
+  }
+
+  &__items-dropdown-element {
+    margin-top: 4.56px;
+  }
+
+  &__exp-checkbox-buttons {
+    margin-top: 28px;
+  }
 
   &__content {}
 
