--- a/src/pages/search-room/search-room.scss
+++ b/src/pages/search-room/search-room.scss
@@ -32,7 +32,7 @@
   &__content-wrapper {
     flex: 1;
     display: flex;
-    flex-flow: column;
+    flex-flow: wrap;
   }
 
   &__room-card {}
@@ -40,6 +40,8 @@
   &__aside {
     padding-top: 30px;
     padding-left: 140px;
+    padding-right: 60px;
+    flex-basis: 1 1 466px;
   }
 
   &__date-dropdown-title,
@@ -90,13 +92,39 @@
     margin-top: 28px;
   }
 
-  &__content {}
+  &__content {
+    flex: 1 1 292px;
+  }
 
-  &__title {}
+  &__title {
+    margin-top: 30px;
+    margin-bottom: 0;
 
-  &__rooms {}
+  }
 
-  &__pagination {}
+  &__rooms {
+    display: flex;
+    flex-flow: wrap;
+    justify-content: space-between;
+    max-width: 834px;
+
+    @media (max-width: 1270px) {
+      justify-content: space-evenly;
+    }
+
+
+  }
+
+  &__room-card {
+    margin-top: 21px;
+  }
+
+
+  &__pagination {
+    margin: 42.94px auto 70px auto;
+    max-width: 360px;
+
+  }
 
   &__footer {}
 }
