--- a/src/pages/search-room/search-room.scss
+++ b/src/pages/search-room/search-room.scss
@@ -41,7 +41,12 @@
     padding-top: 30px;
     padding-left: 140px;
     padding-right: 60px;
-    flex-basis: 1 1 466px;
+    flex-basis: 1 1 266px;
+
+    @media (max-width: 500px) {
+      padding-left: 50px;
+      padding-right: 0;
+    }
   }
 
   &__date-dropdown-title,
@@ -99,6 +104,12 @@
   &__title {
     margin-top: 30px;
     margin-bottom: 0;
+
+    @media (max-width: 750px) {
+      font-size: 19px;
+      line-height: 24px;
+    }
+
 
   }
 
