--- a/src/pages/room-details/room-details.scss
+++ b/src/pages/room-details/room-details.scss
@@ -4,16 +4,14 @@
 @import '../common/fonts.scss';
 @import '../../components/header/header.scss';
 @import '../../components/footer/footer.scss';
-@import '../../components/room-card/room-card.scss';
-@import '../../components/checkbox-buttons/checkbox-buttons.scss';
-@import '../../components/pagination/pagination.scss';
-@import '../../components/slider/slider.scss';
-@import '../../components/exp-checkbox/exp-checkbox.scss';
-@import '../../components/dropdown/dropdown.scss';
-@import '../../components/date-dropdown/date-dropdown.scss';
+@import '../../components/price-card/price-card.scss';
+@import '../../components/comment/comment.scss';
 @import '../../components/donut-chart/donut-chart.scss';
+@import '../../components/room-info/room-info.scss';
+@import '../../components/bullet-list/bullet-list.scss';
 
-.search-room {
+.room-details {
+
   &__wrapper {
     max-width: 1440px;
     min-width: 320px;
@@ -30,113 +28,85 @@
 
   &__header {}
 
+  &__images {
+    width: 100%;
+    display: flex;
+
+    @media (max-width: 1059px) {
+      flex-flow: wrap;
+    }
+  }
+
+  &__main-image {
+    background-image: url(../../images/room-details/image1.jpg);
+    background-size: cover;
+    background-position-x: center;
+    background-position-y: bottom;
+    width: 68.125%;
+    height: 485px;
+
+    @media (max-width: 1059px) {
+      width: 100%;
+    }
+  }
+
+
+  &__second-images {
+    width: 31.875%;
+
+    @media (max-width: 1059px) {
+      width: 100%;
+    }
+  }
+
+  &__image_two {
+    height: 242.5px;
+    background-image: url(../../images/room-details/image2.jpg);
+    background-size: cover;
+    background-position-x: center;
+    background-position-y: bottom;
+    background-repeat: no-repeat;
+  }
+
+  &__image_three {
+    height: 242.5px;
+    background-image: url(../../images/room-details/image3.jpg);
+    background-size: cover;
+    background-position-x: center;
+    background-position-y: bottom;
+    background-repeat: no-repeat;
+  }
+
   &__content-wrapper {
     flex: 1;
+  }
+
+  &__content {}
+
+  &__details {
     display: flex;
-    flex-flow: wrap;
-  }
-
-  &__room-card {}
-
-  &__aside {
-    padding-top: 30px;
-    padding-left: 140px;
-    padding-right: 60px;
-    flex-basis: 1 1 266px;
-
-    @media (max-width: 500px) {
-      padding-left: 50px;
-      padding-right: 0;
-    }
-  }
-
-  &__date-dropdown-title,
-  &__guests-dropdown-title,
-  &__items-dropdown-title {
-    font-weight: bold;
-    font-size: 12px;
-    line-height: 15px;
-    text-transform: uppercase;
-    color: $dark100;
-  }
-
-  &__date-dropdown {}
-
-  &__date-dropdown-element {
-    margin-top: 5px;
-  }
-
-  &__guests-dropdown {
-    margin-top: 20.44px;
-  }
-
-  &__guests-dropdown-element {
-    margin-top: 4.56px;
-  }
-
-  &__slider {
-    margin-top: 33.44px;
-  }
-
-  &__checkbox-buttons {
-    margin-top: 95px;
-  }
-
-  &__rich-checkbox-buttons {
-    margin-top: 34px;
-  }
-
-  &__items-dropdown {
-    margin-top: 32.44px;
-  }
-
-  &__items-dropdown-element {
-    margin-top: 4.56px;
-  }
-
-  &__exp-checkbox-buttons {
-    margin-top: 28px;
-  }
-
-  &__content {
-    flex: 1 1 292px;
-  }
-
-  &__title {
-    margin-top: 30px;
-    margin-bottom: 0;
-
-    @media (max-width: 750px) {
-      font-size: 19px;
-      line-height: 24px;
-    }
-
-
-  }
-
-  &__rooms {
-    display: flex;
-    flex-flow: wrap;
-    justify-content: space-between;
-    max-width: 834px;
-
-    @media (max-width: 1270px) {
-      justify-content: space-evenly;
-    }
-
-
-  }
-
-  &__room-card {
-    margin-top: 21px;
   }
 
 
-  &__pagination {
-    margin: 42.94px auto 70px auto;
-    max-width: 360px;
+  &__room-feeling {}
 
-  }
 
-  &__footer {}
+  &room__reviews {}
+
+  &room__review {}
+
+  &__additional-info {}
+
+  &__rules {}
+
+  &__rules-title {}
+
+  &__rules-list {}
+
+  &__cancel {}
+
+  &__cancel-title {}
+
+  &__cancel-text {}
+
 }
