ref room details
rich checkbox title

--- a/src/pages/form-elements/form-elements.pug
+++ b/src/pages/form-elements/form-elements.pug
@@ -198,7 +198,9 @@ html
                 mask: maskArrGuests,
               })
           .form-elements__rich-checkbox-buttons
-            +richCheckboxButtons()
+            +richCheckboxButtons({
+              title: 'доступность',
+            })
         .form-elements__right-wrapper
           .form-elements__slider
             +slider({
