--- a/src/pages/form-elements/form-elements.scss
+++ b/src/pages/form-elements/form-elements.scss
@@ -23,7 +23,7 @@
     max-width: 1440px;
     min-width: 350px;
     margin: 0 auto;
-    background: #F4F4F6;
+    background: #FFFFFF;
   }
 
   &__logo {
