--- a/src/pages/room-details/room-details.scss
+++ b/src/pages/room-details/room-details.scss
@@ -78,35 +78,103 @@
   }
 
   &__content-wrapper {
+    display: flex;
+    justify-content: space-between;
     flex: 1;
+    margin-top: 70px;
+    margin-left: 140px;
+    margin-bottom: 71px;
   }
 
-  &__content {}
+  &__content {
+    max-width: 711px;
+  }
 
   &__details {
     display: flex;
+    justify-content: space-between;
+  }
+
+  &__room-info-element {
+    margin-top: 20px;
+  }
+
+  &__room-feeling {
+    margin-right: 39px;
+  }
+
+  &__room-feeling-element {
+    margin-top: 19px;
   }
 
 
-  &__room-feeling {}
+  &__room-reviews {
+    margin-top: 33px;
+  }
 
+  &__room-review {
+    margin-top: 20px;
+  }
 
-  &room__reviews {}
+  &__room-review:last-child {
+    margin-top: 23px;
+  }
 
-  &room__review {}
+  &__room-reviews-info {
+    display: flex;
+    justify-content: space-between;
+  }
 
-  &__additional-info {}
+  &__room-reviews-count {
+    font-family: $montserrat;
+    font-size: 14px;
+    line-height: 14px;
+    color: $dark50;
+    margin-top: 7px;
+  }
+
+  &__additional-info {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 33px;
+  }
 
   &__rules {}
 
-  &__rules-title {}
+  &__rules-title,
+  &__room-info-title,
+  &__room-feeling-title,
+  &__room-reviews-title,
+  &__cancel-title {
+    font-family: $quicksand;
 
-  &__rules-list {}
+    font-weight: bold;
+    font-size: 19px;
+    line-height: 24px;
+    color: $dark100;
+  }
 
-  &__cancel {}
+  &__rules-title {
+    margin-left: 19.86px;
+  }
+
+  &__rules-list {
+    margin-top: 17px;
+  }
+
+  &__room-cancel {
+    margin-right: 8px;
+  }
 
   &__cancel-title {}
 
-  &__cancel-text {}
+  &__cancel-text {
+    max-width: 341px;
+    margin-top: 17px;
+  }
+
+  &__price-card {
+    margin-right: 140px;
+  }
 
 }
