--- a/src/pages/colors-and-type/colors-and-type.pug
+++ b/src/pages/colors-and-type/colors-and-type.pug
@@ -10,6 +10,7 @@ html
     meta(name='description' content='Colors and types')
     title Colors and type
     link(rel='stylesheet' href='colors-and-type.scss')
+    link(rel='shortcut icon' type='image/x-icon' href='../../icons/favicon.ico')
   body
     .content-uikit
       .content-uikit__logo
