--- a/src/pages/form-elements/form-elements.pug
+++ b/src/pages/form-elements/form-elements.pug
@@ -46,6 +46,7 @@ html
     meta(name='description' content='Form Elements')
     title Form Elements
     link(rel='stylesheet' href='./form-elements.scss')
+    link(rel='shortcut icon' type='image/x-icon' href='../../icons/favicon.ico')
     script(src='../jquery-for-parcel.js')
     script(src='./form-elements.js')
   body
