--- a/src/pages/headers-and-footers/headers-and-footers.pug
+++ b/src/pages/headers-and-footers/headers-and-footers.pug
@@ -9,6 +9,7 @@ html
     meta(name='description' content='headers and footers')
     title Headers & Footers
     link(rel='stylesheet' href='./headers-and-footers.scss')
+    link(rel='shortcut icon' type='image/x-icon' href='../../icons/favicon.ico')
     script(src='../jquery-for-parcel.js')
     script(src='./headers-and-footers.js')
   body
