--- a/src/pages/landing-page/landing-page.pug
+++ b/src/pages/landing-page/landing-page.pug
@@ -15,6 +15,7 @@ html
     meta(name='description' content='landing page')
     title Landing Page
     link(rel='stylesheet' href='./landing-page.scss')
+    link(rel='shortcut icon' type='image/x-icon' href='../../icons/favicon.ico')
     script(src='../jquery-for-parcel.js')
     script(src='./landing-page.js')
   body.landing-page
