--- a/src/pages/registration/registration.pug
+++ b/src/pages/registration/registration.pug
@@ -9,6 +9,7 @@ html
     meta(name='description' content='registration')
     title Registration
     link(rel='stylesheet' href='./registration.scss')
+    link(rel='shortcut icon' type='image/x-icon' href='../../icons/favicon.ico')
     script(src='../jquery-for-parcel.js')
     script(src='./registration.js')
   body.registration
