--- a/src/pages/room-details/room-details.pug
+++ b/src/pages/room-details/room-details.pug
@@ -19,6 +19,7 @@ html
     meta(name='description' content='room details')
     title Room details
     link(rel='stylesheet' href='./room-details.scss')
+    link(rel='shortcut icon' type='image/x-icon' href='../../icons/favicon.ico')
     script(src='../jquery-for-parcel.js')
     script(src='./room-details.js')
   body.room-details
