--- a/src/pages/search-room/search-room.pug
+++ b/src/pages/search-room/search-room.pug
@@ -54,6 +54,7 @@ html
     meta(name='description' content='search room')
     title Search room
     link(rel='stylesheet' href='./search-room.scss')
+    link(rel='shortcut icon' type='image/x-icon' href='../../icons/favicon.ico')
     script(src='../jquery-for-parcel.js')
     script(src='./search-room.js')
   body.search-room
