--- a/src/pages/sign-in/sign-in.pug
+++ b/src/pages/sign-in/sign-in.pug
@@ -9,6 +9,7 @@ html
     meta(name='description' content='sign in')
     title Sign in
     link(rel='stylesheet' href='./sign-in.scss')
+    link(rel='shortcut icon' type='image/x-icon' href='../../icons/favicon.ico')
     script(src='../jquery-for-parcel.js')
     script(src='./sign-in.js')
   body.sign-in
